# pippi-airflow

./: .gitignore  Makefile  README.md  pyproject.toml
dev/: Dockerfile  docker-compose.yml
dev/dags/: bronze_scififoods.py  silver_scififoods.py
pippi/: config.py  deployer.py  invoker.py  stage_director.py  stage_hand.py
